# KnowledgeRepresentation

./: .gitignore  README.md  run.py  setup.cfg  wsgi.py
Triangle Problem/models/: __init__.py  network.py  triangle_semantic.py
Triangle Problem/test/: test_triangle_semantic.py
TriangleProblem/: __init__.py
TriangleProblem/models/: triangle_semantic.py
TriangleProblem/routes/: __init__.py  index.py  triangle.py
TriangleProblem/static/css/: style.css
TriangleProblem/templates/: index.html
TriangleProblem/utils/: response_status.py
