[metadata]
name = KnownledgeRepresentation
version = 1.0.0
url = https://sample.com.vn
license = BSD-3-Clause
maintainer = Nguyen
maintainer_email = contact@sample.com.vn
description = The basic website demo for classroom.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    gunicorn

